# python-example-api/test.py
@@ -1,19 +1,25 @@
+import base64
 import requests
 
 BASE_URL = 'http://localhost:8080'
 
-HEADERS = {
+HEADERS_WITH_BEARER_TOKEN = {
     'Content-Type': 'application/json',
     'Authorization': 'Bearer your_hardcoded_token',
 }
 
+HEADERS_WITH_BASIC_AUTH = {
+    'Content-Type': 'application/json',
+    'Authorization': 'Basic ' + base64.b64encode(b'test_username:test_password').decode('utf-8'),
+}
+
 def test_list_schemas():
-    response = requests.get(f'{BASE_URL}/schemas', headers=HEADERS)
+    response = requests.get(f'{BASE_URL}/schemas', headers=HEADERS_WITH_BASIC_AUTH)
     assert response.status_code == 200
     assert response.json() == ['sales', 'inventory', 'virtual']
 
 def test_list_tables():
-    response = requests.get(f'{BASE_URL}/schemas/sales/tables', headers=HEADERS)
+    response = requests.get(f'{BASE_URL}/schemas/sales/tables', headers=HEADERS_WITH_BASIC_AUTH)
     assert response.status_code == 200
     expected_tables = [
         {'schema': 'sales', 'table': 'orders'},
@@ -23,7 +29,7 @@ def test_list_tables():
            == sorted(expected_tables, key=lambda x: x['table'])
 
 def test_get_table_metadata():
-    response = requests.get(f'{BASE_URL}/schemas/sales/tables/orders', headers=HEADERS)
+    response = requests.get(f'{BASE_URL}/schemas/sales/tables/orders', headers=HEADERS_WITH_BEARER_TOKEN)
     assert response.status_code == 200
     expected_metadata = {
         'schemaTableName': {'schema': 'sales', 'table': 'orders'},
@@ -45,7 +51,7 @@ def test_get_splits_and_rows():
 
     # Get a batch of splits
     response = requests.post(f'{BASE_URL}/schemas/{schema}/tables/{table}/splits',
-                             json={'maxSplitCount': max_split_count}, headers=HEADERS)
+                             json={'maxSplitCount': max_split_count}, headers=HEADERS_WITH_BEARER_TOKEN)
     assert response.status_code == 200
     splits = response.json()['splits']
 
@@ -55,7 +61,7 @@ def test_get_splits_and_rows():
         next_token = None
         while True:
             response = requests.post(f"{BASE_URL}/schemas/{schema}/tables/{table}/splits/{split}/rows",
-                                     json={'nextToken': next_token}, headers=HEADERS)
+                                     json={'nextToken': next_token}, headers=HEADERS_WITH_BEARER_TOKEN)
             assert response.status_code == 200
             row_data = response.json()
             row_count += row_data['rowCount']
